@@ -1,3 +1,8 @@
+Sat Jun  5 21:49:35 2004  John Tytgat  <John.Tytgat@aaug.net>
+
+	* source/netlib/inet_ntoa.c (inet_ntoa): sprintf() used incorrect
+	  conversion specification.
+
 Sat Jun  5 15:58:28 2004  John Tytgat  <John.Tytgat@aaug.net>
 
 	* source/math-asm/_sincos.s (__sincos): Results got written to incorrect
